// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default snapshot 1`] = `
<Card
  className="card"
  expandable={false}
  expanded={null}
  initiallyExpanded={false}
>
  <CardMedia>
    <div
      className="cover-wrapper"
    >
      <img
        alt="Book's Title"
        src=""
      />
    </div>
  </CardMedia>
  <CardText>
    Author of Book
  </CardText>
  <CardActions>
    <DropDownMenu
      anchorOrigin={
        Object {
          "horizontal": "left",
          "vertical": "top",
        }
      }
      animated={true}
      autoWidth={true}
      disabled={false}
      iconButton={<NavigationArrowDropDown />}
      maxHeight={500}
      multiple={false}
      onChange={[Function]}
      openImmediately={false}
      value="none"
    >
      <MenuItem
        anchorOrigin={
          Object {
            "horizontal": "right",
            "vertical": "top",
          }
        }
        checked={false}
        desktop={false}
        disabled={false}
        focusState="none"
        insetChildren={false}
        primaryText="None"
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        value="none"
      />
      <MenuItem
        anchorOrigin={
          Object {
            "horizontal": "right",
            "vertical": "top",
          }
        }
        checked={false}
        desktop={false}
        disabled={false}
        focusState="none"
        insetChildren={false}
        primaryText="Currently Reading"
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        value="currentlyReading"
      />
      <MenuItem
        anchorOrigin={
          Object {
            "horizontal": "right",
            "vertical": "top",
          }
        }
        checked={false}
        desktop={false}
        disabled={false}
        focusState="none"
        insetChildren={false}
        primaryText="Want To Read"
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        value="wantToRead"
      />
      <MenuItem
        anchorOrigin={
          Object {
            "horizontal": "right",
            "vertical": "top",
          }
        }
        checked={false}
        desktop={false}
        disabled={false}
        focusState="none"
        insetChildren={false}
        primaryText="Read"
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        value="read"
      />
    </DropDownMenu>
  </CardActions>
</Card>
`;

exports[`snapshot without author 1`] = `
<Card
  className="card"
  expandable={false}
  expanded={null}
  initiallyExpanded={false}
>
  <CardMedia>
    <div
      className="cover-wrapper"
    >
      <img
        alt="Book's Title"
        src=""
      />
    </div>
  </CardMedia>
  <CardText>
    Unknown Author
  </CardText>
  <CardActions>
    <DropDownMenu
      anchorOrigin={
        Object {
          "horizontal": "left",
          "vertical": "top",
        }
      }
      animated={true}
      autoWidth={true}
      disabled={false}
      iconButton={<NavigationArrowDropDown />}
      maxHeight={500}
      multiple={false}
      onChange={[Function]}
      openImmediately={false}
      value="none"
    >
      <MenuItem
        anchorOrigin={
          Object {
            "horizontal": "right",
            "vertical": "top",
          }
        }
        checked={false}
        desktop={false}
        disabled={false}
        focusState="none"
        insetChildren={false}
        primaryText="None"
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        value="none"
      />
      <MenuItem
        anchorOrigin={
          Object {
            "horizontal": "right",
            "vertical": "top",
          }
        }
        checked={false}
        desktop={false}
        disabled={false}
        focusState="none"
        insetChildren={false}
        primaryText="Currently Reading"
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        value="currentlyReading"
      />
      <MenuItem
        anchorOrigin={
          Object {
            "horizontal": "right",
            "vertical": "top",
          }
        }
        checked={false}
        desktop={false}
        disabled={false}
        focusState="none"
        insetChildren={false}
        primaryText="Want To Read"
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        value="wantToRead"
      />
      <MenuItem
        anchorOrigin={
          Object {
            "horizontal": "right",
            "vertical": "top",
          }
        }
        checked={false}
        desktop={false}
        disabled={false}
        focusState="none"
        insetChildren={false}
        primaryText="Read"
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        value="read"
      />
    </DropDownMenu>
  </CardActions>
</Card>
`;
